[package]
name = "discorss"
version = "0.0.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
dotenvy = "0.15"
url = "2"
feed-rs = "1.2"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = [
  "builder",
  "client",
  "gateway",
  "http",
  "model",
  "time",
  "rustls_backend",
]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.pickledb]
version = "0.5"
default-features = false
features = ["json"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]
