[package]
name = "discorss"
version = "0.0.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default_features = false, features = [
  "builder",
  "client",
  "gateway",
  "http",
  "model",
  "time",
  "rustls_backend",
] }
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
serde = { version = "1", default-features = false, features = ['derive'] }
pickledb = { version = "0", default-features = false, features = ["json"] }
reqwest = { version = "0", default-features = false, features = ["rustls-tls"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
tracing-appender = "0"
dotenvy = "0"
url = "2"
feed-rs = "1"
